- New agent configuration parameter TunnelKeepaliveInterval
- Optimizations in database access layer
- Improved database check procedure
- Management console:
	- Option to set root object for "Geo Map" dashboard element
	- Filter in geo map view
	- "Duplicate" button in DCI threshold editor
	- Option to show legend for performance tab graphs with single DCI
- Implemented option to show "Top N items" in a Dashboad summary table using sorting and line limitation
- Fixed issues: NX-1147, NX-1265, NX-1270, NX-1276, NX-1282, NX-1290, NX-1296, NX-1300, NX-1309, NX-1313, NX-1314, NX-1315, NX-1320, NX-1324, NX-1325, NX-1331, NX-1333, NX-1335


*
* 2.1.1
*

- XEN monitoring subagent
- Fixed issues with agent tunnels
- Fixed bug in STP-based topology discovery
- Fixed unrestricted node poller queue growth when discovery from SNMP traps or syslog is on
- Server's database password can be supplied by external tool
- Fixed OpenBSD compatibility issues
- Correct handling of "dormant" and "not present" interface operational states
- Syslog messages received on loopback bound to receiving node (local management node or syslog proxy node)
- Fixed mail sender address encoding
- Fixed bug with lost agent connectivity after tunnel reconnect
- Zone ID now referenced as Zone UIN (unique identification number) to avoid confusion with zone object ID
- Fixed bug with not generated xx_UNREACHABLE events after server restart
- NXSL:
	- New class "InetAddress"
	- New attribute "ipAddressList" for class "Interface"
	- New method "enableRoutingTablePolling" in class "Node"
- Management console:
	- Improved status map
	- Fixed bug in sorting alarms by zone name
	- Zone ID can be generated automatically on zone creation
	- New node can be created directly from agent tunnel manager
	- "Bar" mode for gauge dashboard elements working correctly
- Fixed issues: NX-930, NX-1143, NX-1153, NX-1170, NX-1263, NX-1272, NX-1273, NX-1278, NX-1281, NX-1284, NX-1285, NX-1286


*
* 2.1
*
